# photoclove

./: .gitignore  .taurignore  LICENSE  README.md  index.html  package.json  vite.config.js
public/: example
src/: .google-auth-config.js  App.jsx  DateList.jsx  DirectoryMenu.jsx  Footer.jsx  Home.jsx  Importer.jsx  Login.jsx  PhotoDisplay.jsx  PhotoInfo.jsx  PhotoLoading.jsx  PhotosList.jsx  PhotosListMini.jsx  Preferences.jsx  RandomMessages.jsx  SelectedPhotoInfo.jsx  Welcome.jsx  main.jsx  style.css  wdyr.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: domain.rs  domain_service.rs  entity.rs  main.rs  repository.rs  value.rs
src-tauri/src/domain/: config.rs  google_photos.rs  importer.rs  photo.rs  photo_meta.rs  trash.rs
src-tauri/src/domain_service/: dir_service.rs  file_service.rs  photo_service.rs  repository_dir_service.rs
src-tauri/src/entity/: config.rs  google_photos.rs  importer.rs  photo.rs  photo_meta.rs  trash.rs
src-tauri/src/repository/: db.rs  dir.rs  meta_db.rs
src-tauri/src/repository/config/: json.rs
src-tauri/src/repository/db/: directory.rs  memory.rs  sqlite.rs
src-tauri/src/repository/meta_db/: tsv.rs
src-tauri/src/value/: comment.rs  date.rs  exif.rs  file.rs  meta.rs  star.rs
src/App/: DateList.jsx  Footer.jsx  Home.jsx  Importer.jsx  Login.jsx  PhotosList.jsx  Preferences.jsx
src/App/Footer/: RandomMessages.jsx
src/App/PhotosList/: DirectoryMenu.jsx  PhotoInfo.jsx  PhotosListMini.jsx
src/App/PhotosList/PhotosListMini/: PhotoDisplay.jsx
src/services/firebase/: app.js  auth.js  index.js
