[package]
name = "photoclove"
version = "0.0.1"
description = "A simple & fast photo manager"
authors = ["ktat"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "global-shortcut-all", "process-relaunch", "protocol-asset", "shell-open"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
rusqlite = "0.27"
rexif = "0.7.3"
linked-hash-map = "0.5.6"
regex = "1.7.0"
filetime = "*"
file-lock = "*"
csv = "*"
tempfile = "*"
dirs = "*"
url = "*"
serde_yaml = "*"
async-trait = "0.1.36"
futures = "0.3.5"
reqwest = "*"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth/", branch = "main"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
